# porcupine

./: .buildinfo  .editorconfig  .flake8  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  asd.c  asd.md  asd.py  asd.rs  bindcheck.py  build-exe-installer.py  build.py  bump.py  cancellable-post.py  dump_tree.py  editor.py  genindex.html  images.html  index.html  innosetup.iss  input-works-yay.py  keybindings.tcl  menubar.html  mypy.ini  objects.inv  plugin-intro.html  plugindl.py  pluginloader.html  porcupine.html  py-modindex.html  pyproject.toml  pytest.ini  release.py  requirements-dev.txt  requirements.txt  runprocess.py  (+11 more)
.doctrees/: environment.pickle  images.doctree  index.doctree  menubar.doctree  plugin-intro.doctree  pluginloader.doctree  porcupine.doctree  settings.doctree  tabs.doctree  textutils.doctree  utils.doctree
.github/workflows/: asd.yml  autofix.yml  build.yml  check.yml  main.yml  on-release.yml  release-builds.yml  tree-sitter-binaries.yml  tree-sitter-binary.yml  windows-build.yml
.mypy_cache/3.8/: __future__.meta.json  _ast.meta.json  _importlib_modulespec.meta.json  _random.meta.json  _thread.meta.json  _warnings.meta.json  _weakref.meta.json  _weakrefset.meta.json  abc.meta.json  argparse.meta.json  array.meta.json  ast.meta.json  atexit.meta.json  builtins.meta.json  cgi.data.json  cgi.meta.json  codecs.meta.json  colorsys.data.json  colorsys.meta.json  configparser.meta.json  contextlib.meta.json  copy.meta.json  dataclasses.meta.json  datetime.meta.json  decimal.meta.json  enum.meta.json  errno.meta.json  fcntl.data.json  fcntl.meta.json  fnmatch.meta.json  functools.meta.json  hashlib.meta.json  inspect.meta.json  io.meta.json  ipaddress.data.json  ipaddress.meta.json  itertools.meta.json  math.meta.json  mmap.meta.json  numbers.meta.json  (+32 more)
.mypy_cache/3.8/collections/: __init__.meta.json  abc.meta.json
_sources/: porcupine.rst.txt
_static/: documentation_options.js
akulis_editor/: __init__.py  __main__.py  config.py  editor.py  files.py  filetabs.py  finddialog.py  highlight.py  linenumbers.py  scrolling.py  tabs.py  textwidget.py
dev-doc/: architecture-and-design.md  patterns.md  plugin-structure.md  releasing.md  settings.md  settings.rst  tests.md  virtual-events.md
docs/: actions.rst  conf.py  dialogs.rst  dirs.rst  extensions.py  filetypes.rst  github_links.py  images.rst  index.rst  menubar.rst  plugin-intro.rst  pluginloader.rst  porcupine.rst  publish.py  settings.rst  tabs.rst  textutils.rst  textwidget.rst  utils.rst
ideas/: README.md  popup.py
launcher/: compile.sh  launch.pyw  main.c  metadata.rc  resources.rc
more_plugins/: README.md  pythonprompt.py  restart.py  terminal.py  tetris.py  ttk_themes.py  ttkthemes.py
my_stubs/: README.md  _tkinter.pyi
my_stubs/tkinter/: __init__.pyi  font.pyi  ttk.pyi
porcupine/: __init__.py  __main__.py  _detach.py  _dialogs.py  _find.py  _ipc.py  _logs.py  _pluginloader.py  _run.py  _session.py  _state.py  actions.py  asd.py  autocomplete.py  config.py  default_config.ini  default_config.json  default_filetypes.toml  default_keybindings.tcl  default_settings.ini  default_themes.ini  dialogs.py  dirs.py  dirs_.py  editor.py  filetabs.py  filetypes.py  find.py  finddialog.py  highlight.py  linenumbers.py  logs.py  longlinemarker.py  menubar.py  pluginloader.py  pluginmanager.py  porcuplugin.py  scrolling.py  settingdialog.py  settingeditor.py  (+7 more)
porcupine/data/: default_settings.ini  default_themes.ini
porcupine/default_configs/: settings.ini
porcupine/images/: __init__.py  sources.txt
porcupine/plugins/: __init__.py  _pythonprompt.py  a.py  aboutdialog.py  anchors.py  autocomplete.py  autoindent.py  autopep8.py  autoquote.py  black.py  blockcursor.py  comment_block.py  comment_selected_lines.py  debugger.py  dekstop_menu.py  desktop_launcher.py  desktop_menu.py  directory_tree.py  directory_tree_delete.py  directory_tree_filemanager.py  directory_tree_git.py  directory_tree_trash.py  drag_to_open.py  drop_to_open.py  editorconfig.py  filemanager.py  filetypes.py  filetypes_chooser.py  find.py  fold.py  fullscreen.py  geometry.py  git.py  git_blame.py  git_right_click.py  git_status.py  google_search.py  gotoline.py  hide_project.py  highlight.py  (+55 more)
porcupine/scripts/: sh_run.sh  windows_run.bat  windows_run.py
scripts/: Porcupine.launch.pyw  bindcheck.py  build-exe-installer.py  build-tree-sitter-binary.py  check-markdown-links.py  download-tkdnd.py  generate-requirements-dev.py  installer.nsi  pyupgrade-all-files.py  release.py  threading_hack.py  tree-sitter-dump.py  tree-sitter-syntax-repos.txt
tests/: conftest.py  test_about_dialog.py  test_actions.py  test_anchors_plugin.py  test_autocomplete_plugin.py  test_cli.py  test_comment_block_plugin.py  test_control_updown.py  test_copy_folder.py  test_copyright.py  test_default_keybindings.py  test_directory_tree_plugin.py  test_dirs_compatibility.py  test_docs.py  test_editorconfig_plugin.py  test_filemanager_plugin.py  test_filetypes.py  test_filetypes_plugin.py  test_find_plugin.py  test_fold_plugin.py  test_fullscreen_plugin.py  test_git_right_click.py  test_git_status_plugin.py  test_highlight_plugin.py  test_images.py  test_indent_dedent.py  test_jump_to_definition_plugin.py  test_langserver.py  test_logs.py  test_markdown_plugin.py  test_matching_paren_plugin.py  test_menubar.py  test_mergeconflict_plugin.py  test_pastebin_plugin.py  test_pluginloader.py  test_pluginmanager.py  test_porcupine_files.py  test_reload_plugin.py  test_restart_plugin.py  test_restarting.py  (+20 more)
tests/editorconfig_test_data/: .editorconfig
user-doc/: getting-started.md  new-programming-language.md  projects.md  python-projects.md
(+166 files in other folders)
