[tool.ruff]
ignore = ["E501"]

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
line_length = 100
profile = "black"
multi_line_output = 3

[tool.ruff]
ignore = ["E501"]

# Flit configuration ([build-system] and [project]) are used when pip installing with github url.
# See commands in README.
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "porcupine"
version = "2023.06.27"
description = "A decent editor written in tkinter"
authors = [{name = "Akuli", email = "akuviljanen17@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = []  # Do not attempt to import porcupine before dependencies are installed
dependencies = [
    "platformdirs>=3.0.0,<4.0.0",
    "Pygments==2.12.0",
    "toposort>=1.5",
    "colorama>=0.2.5",
    "sansio-lsp-client>=0.10.0,<0.11.0",
    "python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",
    "black>=21.5b2",
    "isort>=5.10",
    "typing_extensions",
    "dacite>=1.5.1,<2.0.0",
    "tomli==2.0.1",
    "send2trash>=1.8.0,<2.0.0",
    "psutil>=5.8.0,<6.0.0",
    "PyYAML==6.0",
    "tree-sitter-builds==2023.3.12",
    "sv-ttk>=2.4.5",
]

[project.scripts]
porcu = "porcupine.__main__:main"
porcupine = "porcupine.__main__:main"
