[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
line_length = 100
profile = "black"
multi_line_output = 3

[tool.ruff]
ignore = ["E501"]

# Flit configuration ([build-system] and [project]) are used when pip installing with github url.
# See commands in README.
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "porcupine"
version = "2023.06.27"
description = "A decent editor written in tkinter"
authors = [{ name = "Akuli", email = "akuviljanen17@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = [
] # Do not attempt to import porcupine before dependencies are installed
dependencies = [
    "platformdirs>=3.10.0,<4.0.0",
    "pygments==2.12.0", # pygments version fixed because haxx in highlight plugin
    "toposort>=1.10",
    "colorama>=0.4.6",
    "sansio-lsp-client>=0.10.0,<0.11.0",
    "python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",
    # black and isort minimum versions should be something old and kinda reasonable.
    # For developing Porcupine, newer versions can be set in 'dev' optional deps.
    "black>=21.5b2",
    "isort>=5.10",
    "typing_extensions", # typing.Literal is new in python 3.8
    "dacite>=1.8.1,<2.0.0",
    "tomli==2.0.1",
    "send2trash>=1.8.2,<2.0.0",
    "psutil>=5.9.5,<6.0.0",
    "pyyaml==6.0.1",
    "tree-sitter-builds==2023.3.12",
    "sv-ttk>=2.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-randomly==3.13.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.11.1",
    "pycln==2.2.1",
    "black==23.7.0",
    "ruff==0.0.282",
    "pyupgrade==3.10.1",
    "sphinx>=4.0.0, <5.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0, <3.0.0",
    "mypy==1.1.1", # exact versions to avoid "works on my computer" problems
    "types-Pygments==2.16.0.0",
    "types-docutils==0.20.0.1",
    "types-Send2Trash==1.8.2.7",
    "types-setuptools==68.0.0.3",
    "types-colorama==0.4.15.12",
    "types-toposort==1.10.0.1",
    "types-psutil==5.9.5.16",
    "types-PyYAML==6.0.12.11",
    "types-tree-sitter==0.20.1.4",
    "types-tree-sitter-languages==1.7.0.1",
]

[project.scripts]
porcu = "porcupine.__main__:main"
porcupine = "porcupine.__main__:main"
