[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
line_length = 100
profile = "black"
multi_line_output = 3

[tool.ruff]
ignore = ["E501"]

# Flit configuration ([build-system] and [project]) are used when pip installing with github url.
# See commands in README.
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "porcupine"
version = "2024.03.31"
description = "A decent editor written in tkinter"
authors = [{name = "Akuli", email = "akuviljanen17@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = []  # Do not attempt to import porcupine before dependencies are installed
dependencies = [
    "Pygments==2.15.0",
    "colorama>=0.2.5",
    "sansio-lsp-client>=0.10.0,<0.11.0",
    # TODO: langservers are disabled for now
    #"python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",
    "black>=25.12.0",
    "isort>=7.0.0",
    "dacite>=1.5.1,<2.0.0",
    "tomli==2.0.1",
    "send2trash>=1.8.0,<2.0.0",
    "psutil>=5.8.0,<6.0.0",
    "PyYAML>=6.0,<7",
    "tree-sitter-language-pack==0.13.0",
    "requests>=2.24.0, <3.0.0",
    # TODO: upgrade sv-ttk
    "sv-ttk==2.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pycln==2.6.0",
    "pyupgrade==3.21.2",
    "pillow>=5.4.1",

    # type checking, exact versions to avoid "works on my computer" problems
    "mypy==1.9.0",
    "types-Pygments==2.14.0.6",
    "types-docutils==0.19.1.6",
    "types-Send2Trash==1.8.2.4",
    "types-setuptools==67.6.0.5",
    "types-colorama==0.4.15.8",
    "types-psutil==5.9.5.10",
    "types-PyYAML==6.0.12.8",
    "types-tree-sitter==0.20.1.2",
    "types-tree-sitter-languages==1.5.0.2",
    "types-requests==2.31.0.20240311",
]

[project.scripts]
porcu = "porcupine.__main__:main"
porcupine = "porcupine.__main__:main"
